fix: change  z-index to style variable (#412)

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -105,7 +105,7 @@
   margin-top: 1px;
   margin-bottom: 1px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  z-index: 2001;
+  z-index: $popup-z-index;
 }
 
 .#{$namespace}-datepicker-sidebar {
