--- a/src/style/var.scss
+++ b/src/style/var.scss
@@ -5,6 +5,8 @@ $primary-color: #1284e7 !default;
 
 $today-color: mix(#fff, $primary-color, 10%) !default;
 
+$popup-z-index: 2001 !default;
+
 $input-border-color: #ccc !default;
 $input-color: #555 !default;
 $input-hover-border-color: #409aff !default;
